# Auto-FreeCF

./: .gitignore  README.md  browser_bot.py  cli.js  package.json  postinstall.js  pyproject.toml  requirements.txt  run.sh  terminal_ui.py  validate.py  web_ui.py
src/: __init__.py
tests/: test_curl.py  test_login.py  test_undetected.py
